<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="com.example.sharanya.MyPassbook.RegisterActivity">

    <LinearLayout
        android:layout_width="404dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="220dp"
            android:layout_height="110dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/logon"
            android:tint="@android:color/white"
            android:contentDescription="" />

        <TextView
            android:id="@+id/label_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:text="REGISTER"
            android:textColor="@color/textColor"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat"
            tools:ignore="RtlHardcoded"/>

        <EditText
            android:id="@+id/etName"
            android:layout_width="282dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/Name"
            android:inputType="text"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            tools:ignore="HardcodedText" />


        <EditText
            android:id="@+id/etUsername"
            android:layout_width="282dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/Username"
            android:inputType="text"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            tools:ignore="HardcodedText" />


        <EditText
            android:id="@+id/etEmail"
            android:layout_width="282dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            tools:ignore="HardcodedText" />


        <EditText
            android:id="@+id/etPassword"
            android:layout_width="282dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/bRegister"
            android:layout_width="282dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/colorAqua"
            android:text="@string/Register"
            android:textColor="@color/white"
            tools:ignore="HardcodedText,InefficientWeight" />

        <!-- Link to Login Screen -->

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="232dp"
            android:layout_height="26dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/tvLogin"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:textSize="15sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />


</LinearLayout>